# EE5003_project

Assembly_Codes/: instr_c3_0_v5.txt  instr_out_v5.txt
Data_preparation_tools/Compiler/: CMakeLists.txt  assembly.cpp  assembly.h  bit_sequence.h  bug_message.h  global_data.cpp  handler.cpp  handler.h  init.cpp  machine_code.cpp  machine_code.h  main.cpp  num_magic.cpp  num_magic.h  opcode.h  operation_code.cpp  operation_code.h  readme.md  token.cpp  token.h  translator.cpp  translator.h
Data_preparation_tools/Compiler/Input/: instr_c1_0_v4.txt  instr_s2_0_v5.txt  instr_s4_0_v5.txt
Data_preparation_tools/Compiler/temp/: out_SETless.txt  out_aliasless.txt  out_commentless.txt  out_segidless.txt  out_segmentless.txt  out_sepaless.txt
Data_preparation_tools/Input_spike/: cnnspike_all_pic.py  cnnspike_one_pic.py  readme.md
HLS_Project/: ALU.cpp  ALU.h  CMakeLists.txt  PE.cpp  PE.h  cluster_0.cpp  cluster_0.h  cluster_1.cpp  cluster_1.h  cluster_2.cpp  cluster_2.h  cluster_3.cpp  cluster_3.h  cluster_4.cpp  cluster_4.h  cluster_5.cpp  cluster_5.h  cluster_scheduler.cpp  cluster_scheduler.h  decoder.cpp  decoder.h  executer.cpp  executer.h  global_controller.cpp  global_vars.h  main.cpp  misc.cpp  misc.h  output_mem.cpp  output_mem.h  potential_init.cpp  potential_init.h  register_file.cpp  register_file.h  spike_scheduler.cpp  spike_scheduler.h  weight_init.cpp  weight_init.h
MATLAB_Codes/: convlifsim.m  my_example_convnet.m  test_result.mat  true_result.mat
Vitis_Codes/: helloworld.c
Vivado_Project/: psu_init.c  psu_init.h  psu_init.html  psu_init.tcl  psu_init_gpl.c  psu_init_gpl.h  ultrascale_v33.xpr  vivado.jou  vivado_14856.backup.jou  vivado_15804.backup.jou  vivado_22068.backup.jou  vivado_33300.backup.jou  vivado_4936.backup.jou
(+56 files in other folders)
